--- a/package.json
+++ b/package.json
@@ -10,24 +10,30 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@tiptap/pm": "^2.0.3",
-    "@tiptap/react": "^2.0.3",
-    "@tiptap/starter-kit": "^2.0.3",
+    "@codemirror/basic-setup": "^0.20.0",
+    "@codemirror/commands": "^6.2.3",
+    "@codemirror/lang-javascript": "^6.1.7",
+    "@codemirror/state": "^6.2.0",
+    "@codemirror/view": "^6.10.1",
+    "@types/codemirror": "^5.60.7",
     "classnames": "^2.3.2",
+    "codemirror": "5",
+    "is-hotkey": "^0.2.0",
     "react": "^18.2.0",
+    "react-codemirror2": "^7.2.1",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@types/react": "^18.0.28",
-    "@types/react-dom": "^18.0.11",
-    "@typescript-eslint/eslint-plugin": "^5.57.1",
-    "@typescript-eslint/parser": "^5.57.1",
-    "@vitejs/plugin-react-swc": "^3.0.0",
-    "eslint": "^8.38.0",
+    "@types/react": "^18.2.0",
+    "@types/react-dom": "^18.2.1",
+    "@typescript-eslint/eslint-plugin": "^5.59.2",
+    "@typescript-eslint/parser": "^5.59.2",
+    "@vitejs/plugin-react-swc": "^3.3.0",
+    "eslint": "^8.39.0",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.3.4",
+    "eslint-plugin-react-refresh": "^0.3.5",
     "less": "^4.1.3",
-    "typescript": "^5.0.2",
-    "vite": "^4.3.0"
+    "typescript": "^5.0.4",
+    "vite": "^4.3.4"
   }
 }
