--- a/package.json
+++ b/package.json
@@ -21,7 +21,10 @@
     "is-hotkey": "^0.2.0",
     "react": "^18.2.0",
     "react-codemirror2": "^7.2.1",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "slate": "^0.94.0",
+    "slate-history": "^0.93.0",
+    "slate-react": "^0.94.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.0",
