--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@codemirror/state": "^6.2.0",
     "@codemirror/view": "^6.10.1",
     "@types/codemirror": "^5.60.7",
+    "antd": "^5.4.7",
     "classnames": "^2.3.2",
     "codemirror": "5",
     "is-hotkey": "^0.2.0",
@@ -27,6 +28,7 @@
     "slate-react": "^0.94.0"
   },
   "devDependencies": {
+    "@types/is-hotkey": "^0.1.7",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.1",
     "@typescript-eslint/eslint-plugin": "^5.59.2",
