--- a/package.json
+++ b/package.json
@@ -25,12 +25,14 @@
     "react-dom": "^18.2.0",
     "slate": "^0.94.0",
     "slate-history": "^0.93.0",
-    "slate-react": "^0.94.0"
+    "slate-react": "^0.94.0",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@types/is-hotkey": "^0.1.7",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.1",
+    "@types/uuid": "^9.0.1",
     "@typescript-eslint/eslint-plugin": "^5.59.2",
     "@typescript-eslint/parser": "^5.59.2",
     "@vitejs/plugin-react-swc": "^3.3.0",
