--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "slate": "^0.94.0",
     "slate-history": "^0.93.0",
     "slate-react": "^0.94.0",
-    "uuid": "^9.0.0"
+    "uuid": "^9.0.0",
+    "zustand": "^4.3.8"
   },
   "devDependencies": {
     "@types/is-hotkey": "^0.1.7",
