--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "@codemirror/view": "^6.10.1",
     "@types/codemirror": "^5.60.7",
     "antd": "^5.4.7",
+    "axios": "^1.4.0",
     "classnames": "^2.3.2",
     "codemirror": "5",
+    "github-api": "^3.4.0",
     "is-hotkey": "^0.2.0",
     "react": "^18.2.0",
     "react-codemirror2": "^7.2.1",
