--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "github-api": "^3.4.0",
     "is-hotkey": "^0.2.0",
     "react": "^18.2.0",
+    "react-cmdk": "^1.3.9",
     "react-codemirror2": "^7.2.1",
     "react-dom": "^18.2.0",
     "slate": "^0.94.0",
