--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@codemirror/state": "^6.2.0",
     "@codemirror/view": "^6.10.1",
     "@types/codemirror": "^5.60.7",
+    "ahooks": "^3.7.7",
     "antd": "^5.4.7",
     "axios": "^1.4.0",
     "better-react-mathjax": "^2.0.2",
