--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "codemirror": "5",
     "github-api": "^3.4.0",
     "is-hotkey": "^0.2.0",
+    "mdx-mermaid": "^1.3.2",
+    "mermaid": "^10.1.0",
     "react": "^18.2.0",
     "react-cmdk": "^1.3.9",
     "react-codemirror2": "^7.2.1",
