--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@codemirror/lang-javascript": "^6.1.7",
     "@codemirror/state": "^6.2.0",
     "@codemirror/view": "^6.10.1",
+    "@tauri-apps/api": "^1.3.0",
     "@types/codemirror": "^5.60.7",
     "ahooks": "^3.7.7",
     "antd": "^5.4.7",
