--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "better-react-mathjax": "^2.0.2",
     "classnames": "^2.3.2",
     "codemirror": "5",
+    "graphviz-react": "^1.2.5",
     "is-hotkey": "^0.2.0",
     "mdx-mermaid": "^1.3.2",
     "mermaid": "^10.1.0",
