--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@codemirror/lang-javascript": "^6.1.7",
     "@codemirror/state": "^6.2.0",
     "@codemirror/view": "^6.10.1",
+    "@emoji-mart/data": "^1.1.2",
+    "@emoji-mart/react": "^1.1.1",
     "@tauri-apps/api": "^1.3.0",
     "@types/codemirror": "^5.60.7",
     "ahooks": "^3.7.7",
@@ -25,6 +27,7 @@
     "better-react-mathjax": "^2.0.2",
     "classnames": "^2.3.2",
     "codemirror": "5",
+    "emoji-mart": "^5.5.2",
     "graphviz-react": "^1.2.5",
     "is-hotkey": "^0.2.0",
     "mdx-mermaid": "^1.3.2",
