--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   },
   "dependencies": {
     "@ant-design/icons": "^5.0.1",
+    "@babel/plugin-syntax-unicode-sets-regex": "^7.18.6",
+    "@babel/standalone": "^7.22.2",
     "@codemirror/basic-setup": "^0.20.0",
     "@codemirror/commands": "^6.2.3",
     "@codemirror/lang-javascript": "^6.1.7",
@@ -43,6 +45,7 @@
     "zustand": "^4.3.8"
   },
   "devDependencies": {
+    "@types/babel__standalone": "^7.1.4",
     "@types/is-hotkey": "^0.1.7",
     "@types/node": "^20.2.1",
     "@types/react": "^18.2.0",
