--- a/package.json
+++ b/package.json
@@ -1,14 +1,22 @@
 {
   "name": "editor",
   "private": true,
-  "version": "0.0.0",
-  "type": "module",
+  "version": "0.0.1",
+  "main": "./out/main/index.js",
   "scripts": {
     "start": "vite",
     "dev": "vite",
     "build": "tsc && vite build",
     "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "electron:dev": "electron-vite dev",
+    "electron:preview": "electron-vite preview",
+    "electron:build": "electron-vite build",
+    "tauri:dev": "tauri dev",
+    "tauri:build": "tauri build",
+    "build:win": "npm run electron:build && electron-builder --win --config",
+    "build:mac": "npm run electron:build && electron-builder --mac --config",
+    "build:linux": "npm run electron:build && electron-builder --linux --config"
   },
   "dependencies": {
     "@ant-design/icons": "^5.0.1",
@@ -19,8 +27,8 @@
     "@codemirror/lang-javascript": "^6.1.7",
     "@codemirror/state": "^6.2.0",
     "@codemirror/view": "^6.10.1",
-    "@emoji-mart/data": "^1.1.2",
-    "@emoji-mart/react": "^1.1.1",
+    "@electron-toolkit/preload": "^2.0.0",
+    "@electron-toolkit/utils": "^1.0.2",
     "@tauri-apps/api": "^1.3.0",
     "@types/codemirror": "^5.60.7",
     "ahooks": "^3.7.7",
@@ -30,7 +38,7 @@
     "classnames": "^2.3.2",
     "codemirror": "5",
     "dayjs": "^1.11.8",
-    "emoji-mart": "^5.5.2",
+    "electron": "^25.2.0",
     "graphviz-react": "^1.2.5",
     "is-hotkey": "^0.2.0",
     "mdx-mermaid": "^1.3.2",
@@ -47,6 +55,8 @@
     "zustand": "^4.3.8"
   },
   "devDependencies": {
+    "@electron-toolkit/tsconfig": "^1.0.1",
+    "@electron/notarize": "^1.2.4",
     "@tauri-apps/cli": "^1.3.1",
     "@types/babel__standalone": "^7.1.4",
     "@types/is-hotkey": "^0.1.7",
@@ -57,11 +67,13 @@
     "@typescript-eslint/eslint-plugin": "^5.59.2",
     "@typescript-eslint/parser": "^5.59.2",
     "@vitejs/plugin-react-swc": "^3.3.0",
+    "electron-builder": "^24.4.0",
+    "electron-vite": "^1.0.23",
     "eslint": "^8.39.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.3.5",
     "less": "^4.1.3",
     "typescript": "^5.0.4",
-    "vite": "^4.3.4"
+    "vite": "4.3.9"
   }
 }
