--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "antd": "^5.4.7",
     "axios": "^1.4.0",
     "better-react-mathjax": "^2.0.2",
+    "better-sqlite3": "^8.4.0",
     "classnames": "^2.3.2",
     "codemirror": "5",
     "dayjs": "^1.11.8",
@@ -57,8 +58,10 @@
   "devDependencies": {
     "@electron-toolkit/tsconfig": "^1.0.1",
     "@electron/notarize": "^1.2.4",
+    "@electron/rebuild": "^3.2.13",
     "@tauri-apps/cli": "^1.3.1",
     "@types/babel__standalone": "^7.1.4",
+    "@types/better-sqlite3": "^7.6.4",
     "@types/is-hotkey": "^0.1.7",
     "@types/node": "^20.2.1",
     "@types/react": "^18.2.0",
