--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "./out/main/index.js",
   "scripts": {
     "start": "npm run electron:dev",
-    "dev": "vite",
+    "dev": "npm run electron:dev",
     "build": "tsc && vite build",
     "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
@@ -16,7 +16,8 @@
     "tauri:build": "tauri build",
     "build:win": "npm run electron:build && electron-builder --win --config",
     "build:mac": "npm run electron:build && electron-builder --mac --config",
-    "build:linux": "npm run electron:build && electron-builder --linux --config"
+    "build:linux": "npm run electron:build && electron-builder --linux --config",
+    "postinstall": "electron-builder install-app-deps"
   },
   "dependencies": {
     "@ant-design/icons": "^5.0.1",
@@ -33,7 +34,6 @@
     "classnames": "^2.3.2",
     "codemirror": "5",
     "dayjs": "^1.11.8",
-    "electron": "^25.2.0",
     "graphviz-react": "^1.2.5",
     "is-hotkey": "^0.2.0",
     "mdx-mermaid": "^1.3.2",
@@ -65,6 +65,7 @@
     "@typescript-eslint/eslint-plugin": "^5.59.2",
     "@typescript-eslint/parser": "^5.59.2",
     "@vitejs/plugin-react-swc": "^3.3.0",
+    "electron": "^25.2.0",
     "electron-builder": "^24.4.0",
     "electron-vite": "^1.0.23",
     "eslint": "^8.39.0",
