--- a/.github/workflows/electron.yml
+++ b/.github/workflows/electron.yml
@@ -25,7 +25,7 @@ jobs:
       - name: Install Dependencies
         run: |
           npm install -g pnpm
-          pnpm install
+          pnpm install --no-frozen-lockfile
 
       - name: build-win
         if: matrix.os == 'windows-latest'
