--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "version": "0.0.4",
   "main": "./out/main/index.js",
   "scripts": {
-    "start": "npm run electron:dev",
-    "dev": "npm run electron:dev",
-    "build": "tsc && vite build",
+    "start": "vite",
+    "dev": "vite",
+    "build": "vite build",
     "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
     "electron:dev": "electron-vite dev",
@@ -25,6 +25,7 @@
     "@babel/standalone": "^7.22.2",
     "@electron-toolkit/preload": "^2.0.0",
     "@electron-toolkit/utils": "^1.0.2",
+    "@electron/notarize": "^1.2.4",
     "@tauri-apps/api": "^1.3.0",
     "ahooks": "^3.7.7",
     "antd": "^5.4.7",
@@ -51,8 +52,6 @@
   },
   "devDependencies": {
     "@electron-toolkit/tsconfig": "^1.0.1",
-    "@electron/notarize": "^1.2.4",
-    "@electron/rebuild": "^3.2.13",
     "@tauri-apps/cli": "^1.3.1",
     "@types/babel__standalone": "^7.1.4",
     "@types/better-sqlite3": "^7.6.4",
