--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react-cmdk": "^1.3.9",
     "react-codemirror2": "^7.2.1",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.10.1",
     "react-router-dom": "^6.12.1",
     "slate": "^0.94.1",
     "slate-history": "^0.93.0",
