--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -17,7 +17,7 @@ tauri-build = { version = "1.3.0", features = [] }
 [dependencies]
 serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
-tauri = { version = "1.3.0", features = [] }
+tauri = { version = "1.3.0", features = ["shell-all"] }
 rusqlite = { version = "0.29.0", features = ["bundled"] }
 simple-home-dir = "0.1.2"
 
