--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "classnames": "^2.3.2",
     "codemirror": "5",
     "dayjs": "^1.11.8",
+    "framer-motion": "^10.13.0",
     "graphviz-react": "^1.2.5",
     "is-hotkey": "^0.2.0",
     "mdx-mermaid": "^1.3.2",
