--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "dayjs": "^1.11.8",
     "framer-motion": "^10.13.0",
     "graphviz-react": "^1.2.5",
+    "immer": "^10.0.2",
     "is-hotkey": "^0.2.0",
     "mdx-mermaid": "^1.3.2",
     "mermaid": "^10.1.0",
