--- a/package.json
+++ b/package.json
@@ -45,6 +45,8 @@
     "react": "^18.2.0",
     "react-cmdk": "^1.3.9",
     "react-codemirror2": "^7.2.1",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
     "react-router-dom": "^6.12.1",
