--- a/package.json
+++ b/package.json
@@ -9,30 +9,19 @@
     "build": "tsc && vite build",
     "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "electron:dev": "electron-vite dev",
-    "electron:preview": "electron-vite preview",
-    "electron:build": "electron-vite build",
     "tauri:dev": "tauri dev",
-    "tauri:build": "tauri build",
-    "build:win": "npm run electron:build && electron-builder --win --config",
-    "build:mac": "npm run electron:build && electron-builder --mac --config",
-    "build:linux": "npm run electron:build && electron-builder --linux --config",
-    "postinstall": "electron-builder install-app-deps"
+    "tauri:build": "tauri build"
   },
   "dependencies": {
     "@ant-design/icons": "^5.0.1",
     "@antv/g6": "^4.8.20",
     "@babel/plugin-syntax-unicode-sets-regex": "^7.18.6",
     "@babel/standalone": "^7.22.2",
-    "@electron-toolkit/preload": "^2.0.0",
-    "@electron-toolkit/utils": "^1.0.2",
-    "@electron/notarize": "^1.2.4",
     "@tauri-apps/api": "^1.3.0",
     "ahooks": "^3.7.7",
     "antd": "^5.7.3",
     "axios": "^1.4.0",
     "better-react-mathjax": "^2.0.2",
-    "better-sqlite3": "^8.4.0",
     "classnames": "^2.3.2",
     "codemirror": "5",
     "dayjs": "^1.11.8",
@@ -57,10 +46,8 @@
     "zustand": "^4.3.8"
   },
   "devDependencies": {
-    "@electron-toolkit/tsconfig": "^1.0.1",
     "@tauri-apps/cli": "^1.3.1",
     "@types/babel__standalone": "^7.1.4",
-    "@types/better-sqlite3": "^7.6.4",
     "@types/codemirror": "^5.60.7",
     "@types/is-hotkey": "^0.1.7",
     "@types/node": "^20.2.1",
@@ -70,9 +57,6 @@
     "@typescript-eslint/eslint-plugin": "^5.59.2",
     "@typescript-eslint/parser": "^5.59.2",
     "@vitejs/plugin-react-swc": "^3.3.0",
-    "electron": "^25.2.0",
-    "electron-builder": "^24.4.0",
-    "electron-vite": "^1.0.23",
     "eslint": "^8.39.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.3.5",
