--- a/package.json
+++ b/package.json
@@ -21,7 +21,6 @@
     "ahooks": "^3.7.7",
     "antd": "^5.7.3",
     "axios": "^1.4.0",
-    "better-react-mathjax": "^2.0.2",
     "classnames": "^2.3.2",
     "codemirror": "5",
     "dayjs": "^1.11.8",
@@ -29,6 +28,7 @@
     "graphviz-react": "^1.2.5",
     "immer": "^10.0.2",
     "is-hotkey": "^0.2.0",
+    "katex": "^0.16.8",
     "mdx-mermaid": "^1.3.2",
     "mermaid": "^10.1.0",
     "react": "^18.2.0",
@@ -50,6 +50,7 @@
     "@types/babel__standalone": "^7.1.4",
     "@types/codemirror": "^5.60.7",
     "@types/is-hotkey": "^0.1.7",
+    "@types/katex": "^0.16.2",
     "@types/node": "^20.2.1",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.1",
