--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@antv/g6": "^4.8.20",
     "@babel/plugin-syntax-unicode-sets-regex": "^7.18.6",
     "@babel/standalone": "^7.22.2",
+    "@loadable/component": "^5.15.3",
     "@tauri-apps/api": "^1.3.0",
     "ahooks": "^3.7.7",
     "antd": "^5.7.3",
@@ -50,6 +51,7 @@
     "@types/codemirror": "^5.60.7",
     "@types/is-hotkey": "^0.1.7",
     "@types/katex": "^0.16.2",
+    "@types/loadable__component": "^5.13.5",
     "@types/node": "^20.2.1",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.1",
@@ -61,6 +63,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.3.5",
     "less": "^4.1.3",
+    "rollup-plugin-visualizer": "^5.9.2",
     "typescript": "^5.0.4",
     "vite": "4.3.9"
   }
