--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -20,9 +20,12 @@ serde = { version = "1.0", features = ["derive"] }
 tauri = { version = "1.3.0", features = ["shell-all", "window-close", "window-hide", "window-maximize", "window-minimize", "window-set-fullscreen", "window-show", "window-start-dragging", "window-unmaximize", "window-unminimize"] }
 rusqlite = { version = "0.29.0", features = ["bundled"] }
 simple-home-dir = "0.1.2"
+aliyun-oss-rs = "0.0.5"
+tokio = "1.32.0"
+chrono = "0.4.31"
 
 [features]
 # this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
 # If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
 # DO NOT REMOVE!!
-custom-protocol = [ "tauri/custom-protocol" ]
+custom-protocol = ["tauri/custom-protocol"]
