--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
+    "react-inlinesvg": "^4.0.5",
     "react-router-dom": "^6.12.1",
     "slate": "^0.94.1",
     "slate-history": "^0.93.0",
