--- a/.github/workflows/tauri-release.yml
+++ b/.github/workflows/tauri-release.yml
@@ -57,6 +57,8 @@ jobs:
         with:
           node-version: 16
           cache: 'pnpm'
+        env:
+          NODE_OPTIONS: "--max_old_space_size=4096"
       - name: install Rust stable
         uses: dtolnay/rust-toolchain@stable
       - name: install dependencies (ubuntu only)
@@ -69,6 +71,7 @@ jobs:
       - uses: tauri-apps/tauri-action@v0
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          NODE_OPTIONS: "--max_old_space_size=4096"
         with:
           releaseId: ${{ needs.create-release.outputs.release_id }}
 
