--- a/.github/workflows/tauri-release.yml
+++ b/.github/workflows/tauri-release.yml
@@ -28,8 +28,8 @@ jobs:
               owner: context.repo.owner,
               repo: context.repo.repo,
               tag_name: `app-v${process.env.PACKAGE_VERSION}`,
-              name: `Desktop App v${process.env.PACKAGE_VERSION}`,
-              body: 'Take a look at the assets to download and install this app.',
+              name: `Card Editor v${process.env.PACKAGE_VERSION}`,
+              body: '可见即所得编辑器',
               draft: true,
               prerelease: false
             })
@@ -57,8 +57,6 @@ jobs:
         with:
           node-version: 16
           cache: 'pnpm'
-        env:
-          NODE_OPTIONS: "--max_old_space_size=4096"
       - name: install Rust stable
         uses: dtolnay/rust-toolchain@stable
       - name: install dependencies (ubuntu only)
