--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "immer": "^10.0.2",
     "is-hotkey": "^0.2.0",
     "katex": "^0.16.8",
+    "lodash": "^4.17.21",
     "mermaid": "^10.1.0",
     "react": "^18.2.0",
     "react-cmdk": "^1.3.9",
@@ -53,6 +54,7 @@
     "@types/is-hotkey": "^0.1.7",
     "@types/katex": "^0.16.2",
     "@types/loadable__component": "^5.13.5",
+    "@types/lodash": "^4.14.200",
     "@types/node": "^20.2.1",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.1",
