--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
     "tauri:dev": "tauri dev",
-    "tauri:build": "tauri build"
+    "tauri:build": "tauri build",
+    "updater": "node scripts/updater.mjs",
+    "release": "node scripts/release.mjs"
   },
   "dependencies": {
     "@ant-design/icons": "^5.0.1",
@@ -48,6 +50,7 @@
     "zustand": "^4.3.8"
   },
   "devDependencies": {
+    "@actions/github": "^6.0.0",
     "@tauri-apps/cli": "^1.3.1",
     "@types/babel__standalone": "^7.1.4",
     "@types/codemirror": "^5.60.7",
@@ -66,6 +69,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.3.5",
     "less": "^4.1.3",
+    "node-fetch": "^3.3.2",
     "rollup-plugin-visualizer": "^5.9.2",
     "typescript": "^5.0.4",
     "vite": "4.3.9"
