--- a/.github/workflows/tauri-release.yml
+++ b/.github/workflows/tauri-release.yml
@@ -77,22 +77,22 @@ jobs:
       - name: install frontend dependencies
         run: pnpm install --no-frozen-lockfile
 
-      - uses: tauri-apps/tauri-action@v0
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          NODE_OPTIONS: "--max_old_space_size=4096"
-          TAURI_PRIVATE_KEY: ${{ secrets.TAURI_PRIVATE_KEY }}
-          TAURI_KEY_PASSWORD: ${{ secrets.TAURI_KEY_PASSWORD }}
-        with:
-          releaseId: ${{ needs.create-release.outputs.release_id }}
+#      - uses: tauri-apps/tauri-action@v0
+#        env:
+#          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+#          NODE_OPTIONS: "--max_old_space_size=4096"
+#          TAURI_PRIVATE_KEY: ${{ secrets.TAURI_PRIVATE_KEY }}
+#          TAURI_KEY_PASSWORD: ${{ secrets.TAURI_KEY_PASSWORD }}
+#        with:
+#          releaseId: ${{ needs.create-release.outputs.release_id }}
 
-  # 生成静态资源并将其推送到 github pages
-  updater:
-    runs-on: ubuntu-latest
-    needs: [ create-release, build-tauri ]
+  publish-release:
+    permissions:
+      contents: write
+    runs-on: ubuntu-20.04
+    needs: [create-release, build-tauri]
 
     steps:
-      - uses: actions/checkout@v2
       - uses: pnpm/action-setup@v2
         name: Install pnpm
         with:
@@ -105,35 +105,22 @@ jobs:
           cache: 'pnpm'
       - name: install frontend dependencies
         run: pnpm install --no-frozen-lockfile
-      - run: pnpm updater
+      - name: publish release
+        id: publish-release
+        uses: actions/github-script@v6
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Deploy install.json
-        uses: peaceiris/actions-gh-pages@v3
+          release_id: ${{ needs.create-release.outputs.release_id }}
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./updater
-          force_orphan: true
-
-#  publish-release:
-#    permissions:
-#      contents: write
-#    runs-on: ubuntu-20.04
-#    needs: [create-release, build-tauri]
-#
-#    steps:
-#      - name: publish release
-#        id: publish-release
-#        uses: actions/github-script@v6
-#        env:
-#          release_id: ${{ needs.create-release.outputs.release_id }}
-#        with:
-#          script: |
-#            github.rest.repos.updateRelease({
-#              owner: context.repo.owner,
-#              repo: context.repo.repo,
-#              release_id: process.env.release_id,
-#              draft: false,
-#              prerelease: false
-#            })
+          script: |
+            import updatelog from './scripts/updatelog.js'
+            const pkg = require('./package.json')
+            const tag = `v${pkg.version}`
+            const notes = updatelog(tag)
+            github.rest.repos.updateRelease({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              notes,
+              release_id: process.env.release_id,
+              draft: false,
+              prerelease: false
+            })
