--- a/.github/workflows/tauri-release.yml
+++ b/.github/workflows/tauri-release.yml
@@ -48,34 +48,34 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-      - uses: pnpm/action-setup@v2
-        name: Install pnpm
-        with:
-          version: 8
-          run_install: false
-
-      - name: setup node
-        uses: actions/setup-node@v3
-        with:
-          node-version: 16
-          cache: 'pnpm'
-
-      - name: install Rust stable
-        uses: dtolnay/rust-toolchain@stable
-
-      - name: Rust cache
-        uses: swatinem/rust-cache@v2
-        with:
-          workspaces: './src-tauri -> target'
-
-      - name: install dependencies (ubuntu only)
-        if: matrix.platform == 'ubuntu-20.04'
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y libgtk-3-dev libwebkit2gtk-4.0-dev libappindicator3-dev librsvg2-dev patchelf
-
-      - name: install frontend dependencies
-        run: pnpm install --no-frozen-lockfile
+#      - uses: pnpm/action-setup@v2
+#        name: Install pnpm
+#        with:
+#          version: 8
+#          run_install: false
+#
+#      - name: setup node
+#        uses: actions/setup-node@v3
+#        with:
+#          node-version: 16
+#          cache: 'pnpm'
+#
+#      - name: install Rust stable
+#        uses: dtolnay/rust-toolchain@stable
+#
+#      - name: Rust cache
+#        uses: swatinem/rust-cache@v2
+#        with:
+#          workspaces: './src-tauri -> target'
+#
+#      - name: install dependencies (ubuntu only)
+#        if: matrix.platform == 'ubuntu-20.04'
+#        run: |
+#          sudo apt-get update
+#          sudo apt-get install -y libgtk-3-dev libwebkit2gtk-4.0-dev libappindicator3-dev librsvg2-dev patchelf
+#
+#      - name: install frontend dependencies
+#        run: pnpm install --no-frozen-lockfile
 
 #      - uses: tauri-apps/tauri-action@v0
 #        env:
@@ -93,6 +93,7 @@ jobs:
     needs: [create-release, build-tauri]
 
     steps:
+      - uses: actions/checkout@v3
       - uses: pnpm/action-setup@v2
         name: Install pnpm
         with:
