--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@loadable/component": "^5.15.3",
     "@tauri-apps/api": "^1.5.1",
     "ahooks": "^3.7.7",
+    "ali-oss": "^6.18.1",
     "antd": "^5.7.3",
     "axios": "^1.4.0",
     "classnames": "^2.3.2",
@@ -54,6 +55,7 @@
   "devDependencies": {
     "@actions/github": "^6.0.0",
     "@tauri-apps/cli": "^1.5.6",
+    "@types/ali-oss": "^6.16.11",
     "@types/babel__standalone": "^7.1.4",
     "@types/codemirror": "^5.60.7",
     "@types/is-hotkey": "^0.1.7",
