feat: 支持热力图，支持命令面板跳页面

--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -22,6 +22,7 @@ rusqlite = { version = "0.29.0", features = ["bundled"] }
 simple-home-dir = "0.2.0"
 font-loader = "0.11.0"
 aliyun-oss-rs = "0.0.5"
+chrono = "0.4.31"
 
 [features]
 # this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
