--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@babel/standalone": "^7.22.2",
     "@loadable/component": "^5.15.3",
     "@tauri-apps/api": "^1.5.1",
+    "@tmikeladze/react-cmdk": "1.3.14",
     "ahooks": "^3.7.7",
     "ali-oss": "^6.18.1",
     "antd": "^5.7.3",
