feat: 支持时间统计

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "release": "node scripts/release.mjs"
   },
   "dependencies": {
+    "@ant-design/charts": "^2.0.3",
     "@ant-design/icons": "^5.0.1",
     "@antv/g6": "^4.8.20",
     "@babel/plugin-syntax-unicode-sets-regex": "^7.18.6",
