--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -17,7 +17,7 @@ tauri-build = { version = "1.3.0", features = [] }
 [dependencies]
 serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
-tauri = { version = "1.3.0", features = [ "window-set-always-on-top", "system-tray", "path-all", "process-all", "fs-all", "dialog-all", "os-all", "shell-all", "updater", "window-close", "window-hide", "window-maximize", "window-minimize", "window-set-fullscreen", "window-show", "window-start-dragging", "window-unmaximize", "window-unminimize"] }
+tauri = { version = "1.3.0", features = [ "global-shortcut-all", "window-set-always-on-top", "system-tray", "path-all", "process-all", "fs-all", "dialog-all", "os-all", "shell-all", "updater", "window-close", "window-hide", "window-maximize", "window-minimize", "window-set-fullscreen", "window-show", "window-start-dragging", "window-unmaximize", "window-unminimize"] }
 rusqlite = { version = "0.29.0", features = ["bundled"] }
 simple-home-dir = "0.2.0"
 font-loader = "0.11.0"
