--- a/package.json
+++ b/package.json
@@ -21,13 +21,16 @@
     "@babel/plugin-syntax-unicode-sets-regex": "^7.18.6",
     "@babel/standalone": "^7.22.2",
     "@loadable/component": "^5.15.3",
+    "@radix-ui/react-context-menu": "^2.2.1",
     "@tauri-apps/api": "^1.5.1",
     "@tmikeladze/react-cmdk": "1.3.14",
     "ahooks": "^3.7.7",
     "ali-oss": "^6.18.1",
     "antd": "^5.7.3",
     "axios": "^1.4.0",
+    "class-variance-authority": "^0.7.0",
     "classnames": "^2.3.2",
+    "clsx": "^2.1.1",
     "codemirror": "5",
     "dayjs": "^1.11.8",
     "framer-motion": "^10.13.0",
@@ -37,6 +40,7 @@
     "katex": "^0.16.8",
     "lightgallery": "^2.7.2",
     "lodash": "^4.17.21",
+    "lucide-react": "^0.399.0",
     "mermaid": "^10.1.0",
     "react": "^18.2.0",
     "react-cmdk": "^1.3.9",
@@ -51,6 +55,8 @@
     "slate-history": "^0.93.0",
     "slate-react": "^0.97.0",
     "swiper": "^11.0.3",
+    "tailwind-merge": "^2.3.0",
+    "tailwindcss-animate": "^1.0.7",
     "uuid": "^9.0.0",
     "words-count": "^2.0.2",
     "zustand": "^4.3.8"
@@ -72,12 +78,15 @@
     "@typescript-eslint/eslint-plugin": "^5.59.2",
     "@typescript-eslint/parser": "^5.59.2",
     "@vitejs/plugin-react-swc": "^3.3.0",
+    "autoprefixer": "^10.4.19",
     "eslint": "^8.39.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.3.5",
     "less": "^4.1.3",
     "node-fetch": "^3.3.2",
+    "postcss": "^8.4.38",
     "rollup-plugin-visualizer": "^5.9.2",
+    "tailwindcss": "^3.4.4",
     "typescript": "^5.0.4",
     "vite": "4.3.9"
   }
