--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@antv/g6": "^4.8.20",
     "@babel/plugin-syntax-unicode-sets-regex": "^7.18.6",
     "@babel/standalone": "^7.22.2",
+    "@cantoo/pdf-lib": "^2.2.0",
     "@loadable/component": "^5.15.3",
     "@radix-ui/react-context-menu": "^2.2.1",
     "@tauri-apps/api": "^1.5.1",
@@ -42,6 +43,7 @@
     "lodash": "^4.17.21",
     "lucide-react": "^0.399.0",
     "mermaid": "^10.1.0",
+    "pdfjs-dist": "^4.5.136",
     "react": "^18.2.0",
     "react-cmdk": "^1.3.9",
     "react-codemirror2": "^7.2.1",
