--- a/package.json
+++ b/package.json
@@ -40,11 +40,11 @@
     "immer": "^10.0.2",
     "is-hotkey": "^0.2.0",
     "katex": "^0.16.8",
-    "kld-intersections": "^0.7.0",
     "lightgallery": "^2.7.2",
     "lodash": "^4.17.21",
     "lucide-react": "^0.399.0",
     "mermaid": "^10.1.0",
+    "path-intersection": "^3.1.0",
     "pdfjs-dist": "^4.5.136",
     "react": "^18.2.0",
     "react-cmdk": "^1.3.9",
@@ -61,7 +61,6 @@
     "swiper": "^11.0.3",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
-    "tapable": "^2.2.1",
     "uuid": "^9.0.0",
     "words-count": "^2.0.2",
     "zustand": "^4.3.8"
