--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "react-icons": "^4.10.1",
     "react-inlinesvg": "^4.0.5",
     "react-router-dom": "^6.12.1",
+    "refline.js": "^0.11.1",
     "slate": "^0.94.1",
     "slate-history": "^0.93.0",
     "slate-react": "^0.97.0",
