--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -32,6 +32,7 @@ urlencoding = "2.1.3"
 base64 = "0.22.1"
 uuid = { version = "1.7.4", features = ["serde", "v4"] }
 log = "0.4.22"
+openai_api_rust = "0.1.9"
 
 [features]
 # this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
