--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -18,7 +18,7 @@ tauri-build = { version = "1.3.0", features = [] }
 serde_json = "1.0.132"
 serde = { version = "1.0.214", features = ["derive"] }
 tauri = { version = "1.3.0", features = [ "clipboard-all", "http-all", "protocol-asset", "app-all", "global-shortcut-all", "window-set-always-on-top", "system-tray", "path-all", "process-all", "fs-all", "dialog-all", "os-all", "shell-all", "updater", "window-close", "window-hide", "window-maximize", "window-minimize", "window-set-fullscreen", "window-show", "window-start-dragging", "window-unmaximize", "window-unminimize"] }
-rusqlite = { version = "0.29.0", features = ["bundled"] }
+rusqlite = { version = "0.29.0", features = ["bundled", "blob"] }
 simple-home-dir = "0.2.0"
 font-loader = "0.11.0"
 aliyun-oss-rs = "0.0.5"
@@ -36,6 +36,10 @@ openai_api_rust = "0.1.9"
 htmd = "0.1.6"
 futures-util = "0.3.30"
 bytes = "1.7.2"
+sqlite-vec = "0.1.3"
+zerocopy = "0.8.10"
+text-splitter = { version = "0.18.1", features = ["tiktoken-rs", "markdown"] }
+tiktoken-rs = "0.6.0"
 
 [features]
 # this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
