--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,13 @@
 {
   "compilerOptions": {
     "target": "ESNext",
-    "lib": ["DOM", "DOM.Iterable", "ESNext"],
+    "lib": [
+      "DOM",
+      "DOM.Iterable",
+      "ESNext"
+    ],
     "module": "ESNext",
     "skipLibCheck": true,
-
     /* Bundler mode */
     "moduleResolution": "bundler",
     "allowImportingTsExtensions": true,
@@ -13,7 +16,6 @@
     "noEmit": true,
     "jsx": "react-jsx",
     "esModuleInterop": true,
-
     /* Linting */
     "strict": true,
     "noUnusedLocals": true,
@@ -21,12 +23,27 @@
     "noFallthroughCasesInSwitch": true,
     "baseUrl": ".",
     "paths": {
-      "@/*": ["./src/*"],
-      "@quick-card/*": ["./quick-card/*"],
-      "@quick-time-record/*": ["./quick-time-record/*"],
-      "@editor/*": ["./src/components/Editor/*"]
+      "@/*": [
+        "./src/*"
+      ],
+      "@quick-card/*": [
+        "./quick-card/*"
+      ],
+      "@quick-time-record/*": [
+        "./quick-time-record/*"
+      ],
+      "@editor/*": [
+        "./src/components/Editor/*"
+      ]
     },
   },
-  "include": ["src", "quick-card", "quick-time-record"],
-  "exclude": ["demos"],
+  "include": [
+    "src",
+    "quick-card",
+    "quick-time-record",
+    "src-electron"
+  ],
+  "exclude": [
+    "demos"
+  ],
 }
