feat: 向量化搜索迁移完成

--- a/package.json
+++ b/package.json
@@ -50,9 +50,11 @@
     "is-hotkey": "^0.2.0",
     "katex": "^0.16.8",
     "lightgallery": "^2.7.2",
+    "llm-chunk": "^0.0.1",
     "lodash": "^4.17.21",
     "lucide-react": "^0.399.0",
     "mermaid": "^10.1.0",
+    "openai": "^4.80.1",
     "path-intersection": "^3.1.0",
     "pdfjs-dist": "^4.5.136",
     "react": "^18.2.0",
@@ -69,6 +71,7 @@
     "slate": "^0.94.1",
     "slate-history": "^0.93.0",
     "slate-react": "^0.97.0",
+    "sqlite-vec": "0.1.7-alpha.2",
     "swiper": "^11.0.3",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
