feat: 本地优化能力

--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "eventemitter3": "^5.0.1",
     "font-list": "^1.5.1",
     "framer-motion": "^10.13.0",
+    "fs-extra": "^11.3.0",
     "graphviz-react": "^1.2.5",
     "gsap": "^3.12.5",
     "immer": "^10.0.2",
@@ -88,6 +89,7 @@
     "@types/babel__standalone": "^7.1.8",
     "@types/better-sqlite3": "^7.6.12",
     "@types/codemirror": "^5.60.7",
+    "@types/fs-extra": "^11.0.4",
     "@types/is-hotkey": "^0.1.7",
     "@types/katex": "^0.16.2",
     "@types/loadable__component": "^5.13.5",
