--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@babel/plugin-syntax-unicode-sets-regex": "^7.18.6",
     "@babel/standalone": "^7.22.2",
     "@cantoo/pdf-lib": "^2.2.0",
+    "@electron/rebuild": "^3.7.1",
     "@fortaine/fetch-event-source": "^3.0.6",
     "@loadable/component": "^5.15.3",
     "@radix-ui/react-context-menu": "^2.2.1",
@@ -73,7 +74,7 @@
     "slate": "^0.94.1",
     "slate-history": "^0.93.0",
     "slate-react": "^0.97.0",
-    "sqlite-vec": "0.1.7-alpha.2",
+    "sqlite-vec": "0.1.6",
     "swiper": "^11.0.3",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
@@ -105,7 +106,6 @@
     "electron": "^34.0.1",
     "electron-builder": "^25.1.8",
     "electron-devtools-installer": "^4.0.0",
-    "electron-rebuild": "^3.2.9",
     "eslint": "^8.39.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.3.5",
