--- a/package.json
+++ b/package.json
@@ -25,12 +25,10 @@
     "@antv/g6": "^4.8.20",
     "@babel/plugin-syntax-unicode-sets-regex": "^7.18.6",
     "@babel/standalone": "^7.22.2",
-    "@cantoo/pdf-lib": "^2.2.0",
     "@electron/rebuild": "^3.7.1",
     "@fortaine/fetch-event-source": "^3.0.6",
     "@loadable/component": "^5.15.3",
     "@radix-ui/react-context-menu": "^2.2.1",
-    "@tauri-apps/api": "^1.5.1",
     "@tmikeladze/react-cmdk": "1.3.14",
     "@uiw/react-markdown-preview": "^5.1.3",
     "ahooks": "^3.7.7",
@@ -74,7 +72,7 @@
     "slate": "^0.94.1",
     "slate-history": "^0.93.0",
     "slate-react": "^0.97.0",
-    "sqlite-vec": "0.1.6",
+    "sqlite-vec": "0.1.7-alpha.2",
     "swiper": "^11.0.3",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
