refactor: 格式化代码

--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "release": "node scripts/release.mjs",
     "rebuild": "electron-rebuild -f -w better-sqlite3",
     "postinstall": "npm run rebuild",
-    "format": "prettier --write \"src/**/*.{ts,tsx,js,jsx,json,css,less,scss}\"",
+    "format": "prettier --write \"src-electron/**/*.{ts,tsx,js,jsx,json,css,less,scss}\" \"src/**/*.{ts,tsx,js,jsx,json,css,less,scss}\"",
     "lint:staged": "lint-staged",
     "prepare": "husky"
   },
