feat: 添加草图渲染器和相关设置器，支持多种几何图形的草图风格，优化白板的绘图体验

--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "fs-extra": "^11.3.0",
     "llm-chunk": "^0.0.1",
     "openai": "^4.80.1",
+    "roughjs": "^4.6.6",
     "sqlite-vec": "0.1.7-alpha.2"
   },
   "devDependencies": {
