feat: 将 nodejieba 替换为 @node-rs/jieba，修复 Windows 平台构建问题，调整搜索结果限制

--- a/electron-builder.yml
+++ b/electron-builder.yml
@@ -9,6 +9,14 @@ directories:
   output: release/
   buildResources: build
 
+extraResources:
+  - from: dist-electron/main/dict.txt
+    to: dict.txt
+    filter: ["**/*"]
+  - from: dist-electron/main/idf.txt
+    to: idf.txt
+    filter: ["**/*"]
+
 
 files:
   - "dist/**/*"
