--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "dependencies": {
     "@electron/rebuild": "^3.7.1",
+    "@node-rs/jieba": "^2.0.1",
     "ali-oss": "^6.22.0",
     "axios": "^1.4.0",
     "better-sqlite3": "^11.8.1",
@@ -30,9 +31,7 @@
     "font-list": "^1.5.1",
     "fs-extra": "^11.3.0",
     "llm-chunk": "^0.0.1",
-    "nodejieba": "^3.4.4",
     "openai": "^4.80.1",
-    "pinyin": "4.0.0-alpha.2",
     "roughjs": "^4.6.6",
     "sqlite-vec": "0.1.7-alpha.2"
   },
