feat: 为文章，知识库，项目窗口添加目录

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,6 +23,6 @@
       "@editor/*": ["./src/components/Editor/*"]
     }
   },
-  "include": ["src", "src-electron"],
+  "include": ["src", "src-electron", "profile"],
   "exclude": ["demos"]
 }
