feat: 添加 emoji 编辑器扩展

--- a/package.json
+++ b/package.json
@@ -53,6 +53,8 @@
     "@babel/standalone": "^7.22.2",
     "@commitlint/cli": "^19.8.0",
     "@commitlint/config-conventional": "^19.8.0",
+    "@emoji-mart/data": "^1.2.1",
+    "@emoji-mart/react": "^1.1.1",
     "@fortaine/fetch-event-source": "^3.0.6",
     "@loadable/component": "^5.15.3",
     "@tanstack/react-virtual": "^3.13.4",
@@ -90,6 +92,7 @@
     "electron-builder": "^25.1.8",
     "electron-context-menu": "^4.0.5",
     "electron-devtools-installer": "^4.0.0",
+    "emoji-mart": "^5.6.0",
     "eslint": "^8.39.0",
     "eslint-config-prettier": "^10.1.1",
     "eslint-plugin-prettier": "^5.2.3",
