feat: 打包 ffmpeg

--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "updater": "node scripts/updater.mjs",
     "release": "node scripts/release.mjs",
     "rebuild": "electron-rebuild -f -w better-sqlite3",
-    "postinstall": "npm run rebuild",
+    "postinstall": "node ./node_modules/ffmpeg-static/install.js && npm run rebuild",
     "format": "prettier --write \"src-electron/**/*.{ts,tsx,js,jsx,json,css,less,scss}\" \"src/**/*.{ts,tsx,js,jsx,json,css,less,scss}\"",
     "lint:staged": "lint-staged",
     "prepare": "husky",
@@ -100,6 +100,7 @@
     "eslint-plugin-prettier": "^5.2.3",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.3.5",
+    "ffmpeg-static": "^5.2.0",
     "fluent-ffmpeg": "^2.1.3",
     "framer-motion": "^10.13.0",
     "graphviz-react": "^1.2.5",
