fix: 代码构建问题以及项目文档标题 tip 问题

--- a/package.json
+++ b/package.json
@@ -11,14 +11,14 @@
     "start": "vite",
     "dev": "vite",
     "dev:content": "vite --config vite-page.config.ts",
-    "build:content": "cross-env NODE_OPTIONS='--max-old-space-size=8192' tsc && vite build --config vite-page.config.ts",
-    "build": "cross-env NODE_OPTIONS='--max-old-space-size=12288' tsc && vite build && electron-builder",
+    "build:content": "cross-env NODE_OPTIONS='--max-old-space-size=4096' tsc && vite build --config vite-page.config.ts",
+    "build": "cross-env NODE_OPTIONS='--max-old-space-size=4096' tsc && vite build && electron-builder",
     "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0 --fix",
     "preview": "vite preview",
     "updater": "node scripts/updater.mjs",
     "release": "node scripts/release.mjs",
     "rebuild": "electron-rebuild -f -w better-sqlite3",
-    "postinstall": "node ./node_modules/ffmpeg-static/install.js && npm run rebuild",
+    "postinstall": "npm run rebuild",
     "format": "prettier --write \"src-electron/**/*.{ts,tsx,js,jsx,json,css,less,scss}\" \"src/**/*.{ts,tsx,js,jsx,json,css,less,scss}\"",
     "lint:staged": "lint-staged",
     "prepare": "husky",
