feat: 卡片内支持 bilibili, youtube 完善

--- a/package.json
+++ b/package.json
@@ -29,13 +29,13 @@
   "dependencies": {
     "@distube/ytdl-core": "^4.16.11",
     "@electron/rebuild": "^3.7.1",
+    "@myriaddreamin/typst-ts-node-compiler": "0.6.1-rc3",
     "@node-rs/jieba": "^2.0.1",
     "@tailwindcss/postcss": "^4.1.11",
     "ali-oss": "^6.22.0",
     "axios": "^1.4.0",
     "better-sqlite3": "^11.8.1",
     "electron-log": "^5.3.2",
-    "@myriaddreamin/typst-ts-node-compiler": "0.6.1-rc3",
     "eventemitter3": "^5.0.1",
     "express": "^5.1.0",
     "font-list": "^1.5.1",
@@ -44,7 +44,8 @@
     "openai": "^4.80.1",
     "prettier-plugin-tailwindcss": "^0.6.14",
     "sqlite-vec": "0.1.7-alpha.2",
-    "tailwindcss": "^4.1.11"
+    "tailwindcss": "^4.1.11",
+    "youtubei.js": "^15.1.1"
   },
   "devDependencies": {
     "@actions/github": "^6.0.0",
