feat: 支持对话管理

--- a/electron-builder.yml
+++ b/electron-builder.yml
@@ -34,8 +34,8 @@ nsis:
   createStartMenuShortcut: true
   installerIcon: "build/icon.ico"
   uninstallerIcon: "build/icon.ico"
-  uninstallDisplayName: "notes"
-  shortcutName: "Notes"
+  uninstallDisplayName: "Tau"
+  shortcutName: "Tau"
   include: "build/installer.nsh"
 
 
